--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-streamlit
-pandas
-numpy
-matplotlib
-plotly
-seaborn
-statsmodels
-scikit-learn
-joblib
-scipy
+streamlit==1.24.0
+pandas==1.5.3
+numpy==1.24.3
+matplotlib==3.7.1
+plotly==5.15.0
+seaborn==0.12.2
+statsmodels==0.14.0
+scikit-learn==1.2.2
+joblib==1.2.0
+scipy==1.10.1
